syntax = "proto3";
package pb;

message Entry {
    int64 Term = 1;
    int64 LogIdx = 2;
    string Key = 3;
    string Value = 4;
}

message Entries {
    repeated Entry E = 1;
}