syntax = "proto3";
package pb;

message Meta {
    int32 VotedFor = 1;
}